add Topshelf  and Quartz.Net

--- a/ConsoleApp1/packages.config
+++ b/ConsoleApp1/packages.config
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Common.Logging" version="3.4.1" targetFramework="net472" />
+  <package id="Common.Logging.Core" version="3.4.1" targetFramework="net472" />
+  <package id="Common.Logging.NLog4412" version="3.4.1" targetFramework="net472" />
+  <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="6.0.1" targetFramework="net472" />
+  <package id="NLog" version="4.4.12" targetFramework="net472" />
   <package id="Quartz" version="3.4.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="6.0.0" targetFramework="net472" />
@@ -9,4 +14,5 @@
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net472" />
   <package id="Topshelf" version="4.3.0" targetFramework="net472" />
+  <package id="Topshelf.Quartz" version="0.4.0.1" targetFramework="net472" />
 </packages>
