--- a/ConsoleApp1/App.config
+++ b/ConsoleApp1/App.config
@@ -26,6 +26,88 @@
         <assemblyIdentity name="System.Diagnostics.DiagnosticSource" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Quartz" publicKeyToken="f6b8c98a402cc8a4" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.4.0.0" newVersion="3.4.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Topshelf" publicKeyToken="b800c4cfcdeea87b" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.3.0.0" newVersion="4.3.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
+	<!-- Config Sections 設定 -->
+	<configSections>
+
+		<sectionGroup name="common">
+			<section name="logging" type="Common.Logging.ConfigurationSectionHandler, Common.Logging" />
+		</sectionGroup>
+
+		<section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
+
+	</configSections>
+
+
+	<!-- Common.Logging 轉接至 NLog 輸出 -->
+	<common>
+		<logging>
+			<factoryAdapter type="Common.Logging.NLog.NLogLoggerFactoryAdapter, Common.Logging.NLog41">
+				<arg key="configType" value="INLINE" />
+			</factoryAdapter>
+		</logging>
+	</common>
+	<!-- NLog 輸出設定 -->
+	<nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+
+		<targets>
+			<target name="TcpOutlet" type="NLogViewer" address="tcp://127.0.0.1:4505"/>
+		</targets>
+
+		<!--[設定] 紀錄規則-->
+		<rules>
+			<logger name="*" levels="Debug" writeTo="DebugFile" />
+			<logger name="*" levels="Trace,Warn" writeTo="File" />
+			<logger name="File" levels="Trace,Info,Warn" writeTo="File" />
+			<logger name="*" levels="Error,Fatal" writeTo="FileFatal" />
+		</rules>
+		<!--[設定] 寫入目標-->
+		<targets>
+			<!-- [目標] 檔案 -->
+			<target name="DebugFile" xsi:type="File" fileName="${DebugLogTxtLocation}" layout="${Layout}"
+			        encoding="utf-8" maxArchiveFiles="30" archiveNumbering="Sequence"
+			        archiveAboveSize="1048576" archiveFileName="${LogTxtDir}/${logger}.log{#######}" />
+			<target name="File" xsi:type="File" fileName="${LogTxtLocation}" layout="${Layout}"
+			        encoding="utf-8" maxArchiveFiles="30" archiveNumbering="Sequence"
+			        archiveAboveSize="1048576" archiveFileName="${LogTxtDir}/${logger}.log{#######}" />
+			<target name="FileFatal" xsi:type="File" fileName="${LogTxtLocationFatal}" layout="${LayoutFatal}"
+			        encoding="utf-8" maxArchiveFiles="30" archiveNumbering="Sequence"
+			        archiveAboveSize="1048576" archiveFileName="${LogTxtDir}/FatalFile.log{#######}" />
+		</targets>
+		<!--[變數] 檔案位置 -->
+		<variable name="LogTxtDir" value="${basedir}/Logs/${shortdate}/"/>
+		<variable name="DebugLogTxtLocation" value="${LogTxtDir}/Debug/${logger}.log"/>
+		<variable name="LogTxtLocation" value="${LogTxtDir}/${logger}.log"/>
+		<variable name="LogTxtLocationFatal" value="${LogTxtDir}/FatalFile.log"/>
+		<!--[變數] 文字樣板 -->
+		<variable name="Layout" value="${longdate} | ${level:uppercase=true} | ${logger} | ${message} ${newline}"/>
+		<variable name="LayoutFatal" value="
+====================================================================================================
+${newline}
+發生時間：${longdate} ${newline}${newline}
+Log等級：${level:uppercase=true} ${newline}${newline}
+Logger：${logger} ${newline}${newline}
+Source：${callsite:className=true} ${newline}${newline}
+錯誤訊息：${message} ${newline}${newline}
+StackTrace：${newline}${exception:format=stacktrace}${newline}${newline}
+Exception類別：${exception:format=type} ${newline}${newline}
+Exception訊息：${exception:format=message} ${newline}${newline}
+${newline}
+InnerException Detail：${newline}${onexception:EXCEPTION OCCURRED\:${exception:format=type,message,method:maxInnerExceptionLevel=5:innerFormat=shortType,message,method}}${newline}
+====================================================================================================
+${newline}"/>
+	</nlog>
+
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+	</startup>
 </configuration>
