--- a/WorkDoService/packages.config
+++ b/WorkDoService/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Common.Logging" version="3.4.1" targetFramework="net472" />
+  <package id="Common.Logging.Core" version="3.4.1" targetFramework="net472" />
+  <package id="Common.Logging.NLog4412" version="3.4.1" targetFramework="net472" />
+  <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
   <package id="NLog" version="4.7.15" targetFramework="net472" />
