--- a/ConsoleApp1/WorkDoWinService.csproj
+++ b/ConsoleApp1/WorkDoWinService.csproj
@@ -52,7 +52,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
     <ManifestCertificateThumbprint>5A12528EE5E6F10E10CB5014D73D8D90A1717885</ManifestCertificateThumbprint>
