解決中文亂碼問題

--- a/ConsoleApp1/App.config
+++ b/ConsoleApp1/App.config
@@ -81,6 +81,7 @@ ${newline}"/>
 		<add key="gpsPlace" value="xxxx" />
 		<add key="ClockIn" value="09:00" />
 		<add key="ClockOut" value="18:00" />
+		<add key="WorkDay" value="1,2,3,4,5" />
 	</appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
