--- a/WorkDoServiceIntegrationTests/App.config
+++ b/WorkDoServiceIntegrationTests/App.config
@@ -61,6 +61,7 @@
 		<add key="gpsPlace" value="xxxx" />
 		<add key="ClockIn" value="09:00" />
 		<add key="ClockOut" value="18:00" />
+		<add key="WorkDay" value="2,3,4,5,6" />
 	</appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
