Use calendar subscription to skip holiday clock-ins

--- a/ConsoleApp1/App.config
+++ b/ConsoleApp1/App.config
@@ -79,10 +79,11 @@ ${newline}"/>
 		<add key="Pw" value="xxxx" />
 		<add key="gpsLocation" value="POINT (xxxxx yyyyy)" />
 		<add key="gpsPlace" value="xxxx" />
-		<add key="ClockIn" value="09:00" />
-		<add key="ClockOut" value="18:00" />
-		<add key="WorkDay" value="2,3,4,5,6" />
-	</appSettings>
+                <add key="ClockIn" value="09:00" />
+                <add key="ClockOut" value="18:00" />
+                <add key="WorkDay" value="2,3,4,5,6" />
+                <add key="HolidayCalendarUrl" value="https://www.workdo.co/ical/6f0baf113c1f4f7088920d3ad32d5d543" />
+        </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
