--- a/WorkDoService/app.config
+++ b/WorkDoService/app.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <appSettings>
+    <add key="HolidayCalendarUrl" value="https://www.workdo.co/ical/6f0baf113c1f4f7088920d3ad32d5d543" />
+  </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
