fix bug on runtime

--- a/ConsoleApp1/WorkDoWinService.csproj
+++ b/ConsoleApp1/WorkDoWinService.csproj
@@ -122,7 +122,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MainForm.cs" />
+    <Compile Include="MainForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -130,7 +132,7 @@
     <None Include="App.config" />
     <None Include="..\WorkdoAuto.ico">
       <Link>WorkdoAuto.ico</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="InstallService.bat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
